# csci8150-summer17

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/googletest-release-1.8.0/googletest/: CMakeCache.txt
output/benchmark/: test1_results.txt  test2_results.txt  test3_results.txt  test4_results.txt
scripts/: checkTests.sh  runAllTests.sh
src/: CMakeLists.txt  main.c
src/components/: cpu_manager.c  level_one_cache.c  level_one_cache_controller.c  level_one_cache_controller_manager.c  level_one_cache_manager.c  level_one_data_cache_manager.c  level_one_write_buffer_manager.c  level_two_cache_controller_manager.c  level_two_cache_manager.c  level_two_data_cache_manager.c  level_two_write_buffer_manager.c  memory.c  memory_manager.c  preloader.c  processor.c  victim_cache_manager.c  write_buffer_manager.c
src/data_structures/: cpu_to_l1c_queue.c  instruction_cache.c  l1c_to_cpu_queue.c  l1c_to_l1d_queue.c  l1c_to_l1wb.c  l1c_to_vc_queue.c  l1d_to_l1c_queue.c  l1wb_to_l1c_queue.c  l2c_to_l1c_queue.c  level_one_cache.c  level_one_write_buffer.c  level_two_cache.c  level_two_write_buffer.c  memory.c  queue.c  register_file.c  vc_to_l1c_queue.c  victim_cache.c
src/data_structures/queues/: cpu_to_l1c_queue.c  l1_temp_queue.c  l1c_to_cpu_queue.c  l1c_to_l1d_queue.c  l1c_to_l1wb_queue.c  l1c_to_l2c_queue.c  l1c_to_vc_queue.c  l1d_to_l1c_queue.c  l1wb_to_l1c_queue.c  l2c_to_l1c_queue.c  l2c_to_l2d_queue.c  l2c_to_l2wb_queue.c  l2c_to_mem_queue.c  l2d_to_l2c_queue.c  l2wb_to_l2c_queueu.c  mem_temp_queue.c  mem_to_l2c_queue.c  vc_to_l1c_queue.c
src/include/: components.h  data_structures.h  main.h
src/unit-tests/: instruction-cache-test.c  memory-test.c  register-file-test.c  test.c  tests.h
test/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt
unit-tests/: CMakeLists.txt  instruction_cache_test.c
